#30 - added animation for menu, improved overall menu experience, fixed some alignment issues when menu is open, moved menu to push content instead of overlaying, updated mobile message and added logo

--- a/src/components/ProjectManage.module.css
+++ b/src/components/ProjectManage.module.css
@@ -14,10 +14,7 @@
 }
 
 .actions {
-  position: absolute;
   z-index: 3;
-  right: 2rem;
-  top: 22px;
   display: flex;
   align-items: center;
   background-color: #fff;
@@ -120,4 +117,11 @@
   display: flex !important;
   justify-content: center;
   width: 100% !important;
+}
+
+
+.project_header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
